--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
                     <span class="color">Web</span> Studio
                 </a>
                 <ul class="site-nav list flex">
-                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
                     <li class="item"><a href="#address" class="link">Контакты</a></li>
                 </ul>
             </nav>
