задал затимнение банера

--- a/index.html
+++ b/index.html
@@ -391,11 +391,16 @@
             </section>
 
             <div class="subscribe flex item">
-                <div>
-                    <b class="connection-title">подпишитесь на рассылку</b>
-                    <input type="text">
-                </div>
-                <button type="button" class="button">Подписаться</button>
+
+                <b class=" connection-title">подпишитесь на рассылку</b>
+                <input type="text">
+
+                <button type="button" class="button flex">
+                    <p>Подписаться</p>
+                    <svg>
+                        <use href="./images/svg/sprite.svg#fly"></use>
+                    </svg>
+                </button>
             </div>
         </div>
     </footer>
