--- a/index.html
+++ b/index.html
@@ -390,16 +390,13 @@
                 </ul>
             </section>
 
-            <div class="subscribe flex item">
+            <div class="subscribe item">
 
-                <b class=" connection-title">подпишитесь на рассылку</b>
+                <b class=" connection-title flex">подпишитесь на рассылку</b>
                 <input type="text">
 
-                <button type="button" class="button flex">
+                <button type="button" class="button">
                     <p>Подписаться</p>
-                    <svg>
-                        <use href="./images/svg/sprite.svg#fly"></use>
-                    </svg>
                 </button>
             </div>
         </div>
