добавил fly.svg

--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
                 <b class=" connection-title flex">подпишитесь на рассылку</b>
                 <input type="text">
 
-                <button type="button" class="button">
-                    <p>Подписаться</p>
-                </button>
+                <a class="button link">
+                    Подписаться
+                </a>
             </div>
         </div>
     </footer>
