--- a/index.html
+++ b/index.html
@@ -390,14 +390,14 @@
                 </ul>
             </section>
 
-            <div class="subscribe item">
-
-                <b class=" connection-title flex">подпишитесь на рассылку</b>
-                <input type="text">
-
-                <a class="button link">
-                    Подписаться
-                </a>
+            <div class="subscribe item flex wrap">
+                <b class=" connection-title">подпишитесь на рассылку</b>
+                <div class="flex">
+                    <input type="text">
+                    <a class="button link">
+                        Подписаться
+                    </a>
+                </div>
             </div>
         </div>
     </footer>
