--- a/registreshon.html
+++ b/registreshon.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Студия</title>
+    <title>Регистрация</title>
 
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -21,7 +21,7 @@
         <div class="container flex">
             <nav class="main-nav flex">
                 <a href="./index.html" class="logo link" aria-label="логотип" lang="en">
-                    <span class="color">Web</span>Studio
+                    <span class="color">Web</span> Studio
                 </a>
                 <ul class="site-nav list flex">
                     <li class="item"><a href="./index.html" class="link current">Студия</a></li>
@@ -36,7 +36,7 @@
                         <svg>
                             <use href="./images/svg/sprite.svg#icon-imail"></use>
                         </svg>
-                        info@devstudio.com
+                        <p>info@devstudio.com</p>
                     </a>
                 </li>
                 <li class="item">
@@ -44,7 +44,7 @@
                         <svg>
                             <use href="./images/svg/sprite.svg#icon-phone"></use>
                         </svg>
-                        +38 096 111 11 11
+                        <p>+38 096 111 11 11</p>
                     </a>
                 </li>
             </ul>
@@ -54,33 +54,38 @@
 
     <main>
         <section class="hero container-hero">
+            <div class="registrashon"></div>
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="button">Заказать услугу </button>
+            <a href="./registreshon.html" class="button link">Заказать услугу </a>
         </section>
 
 
         <section class="section about">
             <div class="container">
                 <h2 class="section-title" hidden>Оссобенности</h2>
-                <ul class="list flex about-list wrap">
-                    <li class="item antenna">
+                <ul class="list flex about-list">
+                    <li class="item">
+                        <div class="about-container antenna"></div>
                         <h3 class="item-title">Внимание к деталям</h3>
                         <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию
-                            позиции. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, maiores.</p>
+                            позиции.</p>
                     </li>
-                    <li class="item clock">
+                    <li class="item">
+                        <div class="about-container clock"></div>
                         <h3 class="item-title">Пунктуальность</h3>
                         <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров
                             влечет за собой.
                         </p>
                     </li>
-                    <li class="item diagram">
+                    <li class="item">
+                        <div class="about-container diagram"></div>
                         <h3 class="item-title">Планирование</h3>
                         <p class="section-text">Равным образом консультация с широким активом в значительной степени
                             обуславливает.
                         </p>
                     </li>
-                    <li class="item gagarin">
+                    <li class="item">
+                        <div class="about-container gagarin"></div>
                         <h3 class="item-title">Современные технологии</h3>
                         <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых
                             заданий.</p>
@@ -339,7 +344,7 @@
         <div class="container flex">
             <div class="first-contaner item">
                 <a href="./index.html" class="link logo-footer" aria-label="логотип" lang="en">
-                    <span class="color">Web</span>Studio
+                    <span class="color">Web</span> Studio
                 </a>
                 <address id="address" class="adress-footer flex">
                     <a href="https://goo.gl/maps/UruoTMuBv4FQU7uC8" target="_blank" class="adress-text link">г. Киев,
