--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <div class="container flex">
             <nav class="main-nav flex">
                 <a href="./index.html" class="logo link" aria-label="логотип" lang="en">
-                    <span class="color">Web</span> Studio
+                    <span class="color">Web</span>Studio
                 </a>
                 <ul class="site-nav list flex">
                     <li class="item"><a href="./index.html" class="link">Студия</a></li>
@@ -34,7 +34,7 @@
                         <svg>
                             <use href="./images/svg/sprite.svg#icon-imail"></use>
                         </svg>
-                        <p>info@devstudio.com</p>
+                        info@devstudio.com
                     </a>
                 </li>
                 <li class="item">
@@ -42,7 +42,7 @@
                         <svg>
                             <use href="./images/svg/sprite.svg#icon-phone"></use>
                         </svg>
-                        <p>+38 096 111 11 11</p>
+                        +38 096 111 11 11
                     </a>
                 </li>
             </ul>
@@ -81,21 +81,23 @@
 
                     </li>
                 </ul>
-                <ul class="list flex portfolio-filter">
-                    <li class="item">
+                <ul class="portfolio-filter list flex wrap">
+                    <li class="item example-item">
                         <a href="#" class="link">
                             <div class="container-active">
                                 <img src="./images/images-portfolio/laptop.jpg" alt="портфолио" width="370"
                                     height="294">
-                                <p class="example-active" hidden>Технокряк это современная площадка распространения
-                                    коронавируса.
-                                    Компании
-                                    используют эту
-                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="example-invisible">
+                                    <p class="example-active">Технокряк это современная площадка распространения
+                                        коронавируса.
+                                        Компании
+                                        используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="container-text">
-                                <h2 class="example-titel">Технокряк</h2>
-                                <p class="example-text">Веб-сайт</p>
+                                <h3 class="example-titel">Технокряк</h3>
+                                <p class="example-text flex">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
@@ -103,13 +105,15 @@
                         <a href="#" class="link">
                             <div class="container-active">
                                 <img src="./images/images-portfolio/nba.jpg" alt="игроки нба" width="370" height="294">
-                                <p class="example-active" hidden>Технокряк это современная площадка распространения
-                                    коронавируса.
-                                    Компании используют эту
-                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="example-invisible">
+                                    <p class="example-active flex">Технокряк это современная площадка распространения
+                                        коронавируса.
+                                        Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="container-text">
-                                <h2 class="example-titel">Постер New Orlean vs Golden Star</h2>
+                                <h3 class="example-titel">Постер New Orlean vs Golden Star</h3>
                                 <p class="example-text">Дизайн</p>
                             </div>
                         </a>
@@ -119,13 +123,15 @@
                             <div class="container-active">
                                 <img src="./images/images-portfolio/seafood.jpg" alt="морская еда" width="370"
                                     height="294">
-                                <p class="example-active" hidden>Технокряк это современная площадка распространения
-                                    коронавируса.
-                                    Компании используют эту
-                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="example-invisible">
+                                    <p class="example-active flex">Технокряк это современная площадка распространения
+                                        коронавируса.
+                                        Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="container-text">
-                                <h2 class="example-titel">Ресторан Seafood</h2>
+                                <h3 class="example-titel">Ресторан Seafood</h3>
                                 <p class="example-text">Приложение</p>
                             </div>
                         </a>
@@ -135,13 +141,15 @@
                             <div class="container-active">
                                 <img src="./images/images-portfolio/headsed.jpg" alt="наушники" width="370"
                                     height="294">
-                                <p class="example-active" hidden>Технокряк это современная площадка распространения
-                                    коронавируса.
-                                    Компании используют эту
-                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="example-invisible">
+                                    <p class="example-active flex">Технокряк это современная площадка распространения
+                                        коронавируса.
+                                        Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="container-text">
-                                <h2 class="example-titel">Проект Prime</h2>
+                                <h3 class="example-titel">Проект Prime</h3>
                                 <p class="example-text">Маркетинг</p>
                             </div>
                         </a>
@@ -150,13 +158,15 @@
                         <a href="#" class="link">
                             <div class="container-active">
                                 <img src="./images/images-portfolio/box.jpg" alt="коробки" width="370" height="294">
-                                <p class="example-active" hidden>Технокряк это современная площадка распространения
-                                    коронавируса.
-                                    Компании используют эту
-                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="example-invisible">
+                                    <p class="example-active flex">Технокряк это современная площадка распространения
+                                        коронавируса.
+                                        Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="container-text">
-                                <h2 class="example-titel">Проект Boxes</h2>
+                                <h3 class="example-titel">Проект Boxes</h3>
                                 <p class="example-text">Приложение</p>
                             </div>
                         </a>
@@ -165,13 +175,15 @@
                         <a href="#" class="link">
                             <div class="container-active">
                                 <img src="./images/comp2.jpg" alt="монитор" width="370" height="294">
-                                <p class="example-active" hidden>Технокряк это современная площадка распространения
-                                    коронавируса.
-                                    Компании используют эту
-                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="example-invisible">
+                                    <p class="example-active flex">Технокряк это современная площадка распространения
+                                        коронавируса.
+                                        Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="container-text">
-                                <h2 class="example-titel">Inspiration has no Borders</h2>
+                                <h3 class="example-titel">Inspiration has no Borders</h3>
                                 <p class="example-text">Веб-сайт</p>
                             </div>
                         </a>
@@ -180,13 +192,15 @@
                         <a href="#" class="link">
                             <div class="container-active">
                                 <img src="./images/images-portfolio/book.jpg" alt="книга" width="370" height="294">
-                                <p class="example-active" hidden>Технокряк это современная площадка распространения
-                                    коронавируса.
-                                    Компании используют эту
-                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="example-invisible">
+                                    <p class="example-active flex">Технокряк это современная площадка распространения
+                                        коронавируса.
+                                        Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="container-text">
-                                <h2 class="example-titel">Издание Limited Edition</h2>
+                                <h3 class="example-titel">Издание Limited Edition</h3>
                                 <p class="example-text">Дизайн</p>
                             </div>
                         </a>
@@ -195,13 +209,15 @@
                         <a href="#" class="link">
                             <div class="container-active">
                                 <img src="./images/images-portfolio/label.jpg" alt="" width="370" height="294">
-                                <p class="example-active" hidden>Технокряк это современная площадка распространения
-                                    коронавируса.
-                                    Компании используют эту
-                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="example-invisible">
+                                    <p class="example-active flex">Технокряк это современная площадка распространения
+                                        коронавируса.
+                                        Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="container-text">
-                                <h2 class="example-titel">Проект LAB</h2>
+                                <h3 class="example-titel">Проект LAB</h3>
                                 <p class="example-text">Маркетинг</p>
                             </div>
                         </a>
@@ -210,13 +226,15 @@
                         <a href="#" class="link">
                             <div class="container-active">
                                 <img src=" ./images/comp3.jpg" alt="ноутбук" width="370" height="294">
-                                <p class="example-active" hidden>Технокряк это современная площадка распространения
-                                    коронавируса.
-                                    Компании используют эту
-                                    платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="example-invisible">
+                                    <p class="example-active flex">Технокряк это современная площадка распространения
+                                        коронавируса.
+                                        Компании используют эту
+                                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="container-text">
-                                <h2 class="example-titel">Growing Business</h2>
+                                <h3 class="example-titel">Growing Business</h3>
                                 <p class="example-text">Приложение</p>
                             </div>
                         </a>
@@ -230,7 +248,7 @@
         <div class="container flex">
             <div class="first-contaner item">
                 <a href="./index.html" class="link logo-footer" aria-label="логотип" lang="en">
-                    <span class="color">Web</span> Studio
+                    <span class="color">Web</span>Studio
                 </a>
                 <address id="address" class="adress-footer flex">
                     <a href="https://goo.gl/maps/UruoTMuBv4FQU7uC8" target="_blank" class="adress-text link">г. Киев,
@@ -277,12 +295,17 @@
                 </ul>
             </section>
 
-            <div class="subscribe flex item">
-                <div>
-                    <b class="connection-title">подпишитесь на рассылку</b>
+            <div class="subscribe item flex wrap">
+                <b class=" connection-title">подпишитесь на рассылку</b>
+                <div class="flex">
                     <input type="text">
+                    <a class="button link">
+                        Подписаться
+                        <svg>
+                            <use href="./images/svg/sprite.svg#icon-fly"></use>
+                        </svg>
+                    </a>
                 </div>
-                <button type="button" class="button">Подписаться</button>
             </div>
         </div>
     </footer>
